css/custom.css
html, body {
    height: 100%;
    margin: 0;
	font-family: Block;
}

/* FONTS */

@font-face {
	font-family: 'Block';
	src: url('../fonts/Block.eot');
	src: url('../fonts/Block.eot?#iefix') format('embedded-opentype'),
		url('../fonts/Block.woff') format('woff'),
		url('../fonts/Block.ttf') format('truetype');
}
@font-face {
    font-family: 'th_chakra_petch';
    src: url('../fonts/th_chakra_petch.eot');
    src: url('../fonts/th_chakra_petch.eot?#iefix') format('embedded-opentype'),
         url('../fonts/th_chakra_petch.woff2') format('woff2'),
         url('../fonts/th_chakra_petch.woff') format('woff'),
         url('../fonts/th_chakra_petch.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

p {
	font-size: 32px;
	font-family: "th_chakra_petch", sans-serif;
}
h1.reg-title {
    font-size: 3em;
    text-align: center;
    color: #fff;
    margin: 50px 0;
}
.normalfont {
    font-family: "Sukhumvit Set", Leelawadee, sans-serif !important;
}
.reg-bg h2 {
    margin: 10px 0 20px 0;
    text-shadow: 4px 4px 0 #e6e6e6;
}
.reg-bg h3 {
    margin: 5px 0 10px 0;
}
.reg-bg h4 {
    margin: 5px 0 7px 0;
}
span.remark {
	color: red;
}

/* NAVBAR */

.navbar {
    position: fixed;
    top : 0;
    left: 0;
    right: 0;
    height: 66px;
    line-height: 66px;
    color: #000;
    letter-spacing: 2px;
    font-size: 22px;
    -webkit-transition: top 0.6s;
    -moz-transition: top 0.6s;
    transition: top 0.6s;
    z-index: 5;
}
.navbar.hide {
    top : -66px;
}
.navbar.show {
    top : 0;
}
.navbar.bg {
  background-color: #fff;
  transition: 0.6s;
}
.navbar__logo {
    font-weight: 700;
    margin-left: 28px;
    float: left;
}
.navbar__logo img {
    width: 120px;
    margin: 23px 0 0 0;
}
.menu {
    float: right;
    margin-right: 20px;
}
.menu a {
    padding: 10px;
    color: #000;
    text-decoration: none;
}
.menu a:hover {
    color: #484848;
}
.dropdown-trigger {
    border-right: 2px solid #000;
    padding-right: 15px !important;
    cursor: pointer;
}
.dropdown-content {
    display: block;
    left: 0px;
    top: -235px;
    position: fixed;
    background-color: #fff;
    min-width: 100%;
    box-shadow: 0px 15px 16px 0px rgba(0, 0, 0, 0.04);
    transition: 0.6s;
    line-height: 66px;
    z-index: 4;
}
.dropdown-content a {
    color: black;
    text-decoration: none;
    display: block;
    text-align: center;
    transition: opacity 0.2s, transform 0.2s;
}
.dropdown-content a:hover {
    opacity: 0.6;
    transform: translateY(-10px);
}
.dropdown-content a img {
    margin: 0 auto;
    width: 160px;
    animation-name: sildedown2;
    animation-duration: 0.8s;
}
.downshow {
    top: 0;
    padding-top: 66px;

}

/* DIVS */

.container {
    width: 1000px;
    margin: 0 auto;
}
.fullscreen {
    /* a full-screen div */
    height:100%;
    min-height:100%;
    width: 100%;
    margin: 0 auto;
}
.hero {
    /* hero section */
    background: #fff;
    /* background-image: url(../img/hero-bg.jpg); */
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
}
.hero img {
	max-width: 300px;
	width: 100%;
}
.cta-group {
	margin-top: 30px;
}
.camp-stories {
	background: #000;
    background-image: url(../img/dotted-bg.jpg);
	color: #fff;
}
.spacer {
    width: 100%;
    height: 30px;
}
.reg-bg {
    background: #fff;
    padding: 15px 20px 25px 20px;
    margin-bottom: 30px;
}
.timeline {
    background: #000;
}

/* SUBCAMPS */

iframe.subcamps {
    border: none;
    margin: 0 0 -4px 0;
}

/* FAQ */

.faq {
	background: #efefef;
	padding: 50px 5px;
}
.faq h1, footer h1 {
	text-align: center;
	font-size: 50px;
    margin-bottom: 30px;
}
button.faq-box {
	background: #fff;
	color: #000;
	padding: 10px 20px;
    border: none;
	border-left: 5px solid #000;
	transition: border-left 0.2s;
    width: 100%;
    text-align: left;
    z-index: 2;
    margin: 10px 0 0 0;
}
button.faq-box:hover {
    border: none;
	border-left: 15px solid #203db7;
    background: #fff;
    color: #000;
    cursor: pointer;
}
button.faq-box p {
	margin: 5px 0 0 0;
}
.faq-detail {
    background: #fff;
    padding: 10px 20px;
    display: none;
    z-index: 0;
}
.faq-detail p {
    margin: 5px 0 0 0;
    font-size: 1.5rem;
}
.faq-detail.show {
    display: block;
    animation-name: faq-down;
    animation-duration: 0.3s;
}
@keyframes faq-down {
    from {transform: translateY(-15px);}
    to {transform: translateY(0px);}
}

/* BUTTONS */

a.btn, button.ghost {
	border: 2px solid #000;
    background: transparent;
	padding: 12px 20px;
	font-size: 30px;
    font-family: Block;
	display: inline-block;
	margin: 10px 0;
	text-decoration: none;
	color: #000;
    transition: letter-spacing 0.2s, border 0.2s, background 0.2s;
}
a.btn-full, button.ghost-full {
	width: 100%;
	padding: 12px 0;
}
a.btn:hover, button.ghost:hover {
	background: #000;
	color: #fff;
    letter-spacing: 1px;
    border: 2px solid #fff;
}
.footer a.btn {
    color: #fff;
    border: 2px solid #fff;
}
.footer a.btn:hover {
    background: #fff;
    color: #000;
}
.center {
    margin-left: auto !important;
    margin-right: auto !important;
}

/* FOOTER */

.footer {
    background: #000;
    width: 100%;
    padding: 38px 30px 30px;
    color: #fff;
    border-top: 4px dashed #efefef;
}
.contact {
    margin-bottom: 30px;
}

/* FORMS */

input, select, textarea {
    width: 100%;
	font-family: "Sukhumvit Set", -apple-system-font, sans-serif;
}
label {
    margin-top: 12px;
}
.forminput {
    margin-bottom: 10px;
}
input[type="text"], input[type="date"], input[type="email"], input[type="number"], textarea {
    border: none;
    background: #ebebeb;
    font-size: 1em;
    padding: 6px 4px;
}
input[type="text"]:focus, input[type="text"]:active, input[type="date"]:focus, input[type="date"]:active, input[type="email"]:focus, input[type="email"]:active, input[type="number"]:focus, input[type="number"]:active, textarea:focus, textarea:active {
    border-left: 2px solid #000;
    outline: none;
}
select {
    font-size: 1em;
    padding: 3px 4px;
}
input[type="text"]:focus, input[type="date"]:focus, input[type="email"]:focus, input[type="number"]:focus, textarea:focus {
  animation: shake 0.2s cubic-bezier(.36,.07,.19,.97) both;
  transform: translate3d(0, 0, 0);
  backface-visibility: hidden;
  perspective: 1000px;
}

@keyframes shake {
  10%, 90% {
    transform: translate3d(-1px, 0, 0);
  }

  20%, 80% {
    transform: translate3d(2px, 1px, 0);
  }

  30%, 50%, 70% {
    transform: translate3d(-4px, 0, 0);
  }

  40%, 60% {
    transform: translate3d(4px, 2px, 0);
  }
}

/* Masonry */
* { box-sizing: border-box; }

body { font-family: sans-serif; }

/* ---- grid ---- */

.grid {
  background: #EEE;
  max-width: 1600px;
    margin-left: auto;
    margin-right: auto;
    float:none;
}

/* clearfix */
.grid:after {
  content: '';
  display: block;
  clear: both;
}

/* ---- grid-item ---- */

.grid-item{
  width: 320px;
    height: 120px;
  background: #D26;
  border: 2px solid #333;
  border-color: hsla(0, 0%, 0%, 0.5);
  border-radius: 5px;
    align-items: center;
    margin: 12px;
    padding: 12px;
    float: left;
}
.grid-item img{
  width: 320px;
    height: 120px;
  float: left;
  background: #D26;
  border: 2px solid #333;
  border-color: hsla(0, 0%, 0%, 0.5);
  border-radius: 5px;
    align-items: center;
    padding: 12px;
    margin: 12px;
}

.grid-item--width2 { width: 640px; }
.grid-item--width3 { width: 960px; }
.grid-item--width4 { width: 640px; }

.grid-item--height2  { height: 240px; }
.grid-item--height3  { height: 480px; }
.grid-item--height4  { height: 360px; }

.grid-item--width2 img{ width: 640px; }
.grid-item--width3 img{ width: 960px; }
.grid-item--width4 img{ width: 640px; }

.grid-item--height2 img{ height: 240px; }
.grid-item--height3 img{ height: 480px; }
.grid-item--height4 img{ height: 360px; }

/* MEDIA QUERIES */

@media screen and (max-width: 1199px) {
    .hero img {
        max-width: 250px;
    }
    .container {
        width: 100%;
        max-width: 900px;
    }
    .dropdown-content a img {
        width: 125px;
    }
    @-webkit-keyframes sildedown {
        from {height:0;}
        to {height:172px;}
    }
    @keyframes sildedown {
        from {height:0;}
        to {height:172px;}
    }
    @-webkit-keyframes sildedown2 {
        from {height:0;}
        to {height:125px;}
    }
    @keyframes sildedown2 {
        from {height:0;}
        to {height:125px;}
    }
}
@media screen and (max-width: 768px) {
    .container {
        width: 100%;
    }
    .navbar {
        display: none;
    }
    .hero img {
        max-width: 200px;
    }
    p {
        font-size: 26px;
    }
}
@media screen and (max-width: 1024px) {
    .dropdown-content a img {
        width: 120px;
    }
    @-webkit-keyframes sildedown {
        from {height:0;}
        to {height:167px;}
    }
    @keyframes sildedown {
        from {height:0;}
        to {height:167px;}
    }
    @-webkit-keyframes sildedown2 {
        from {height:0;}
        to {height:120px;}
    }
    @keyframes sildedown2 {
        from {height:0;}
        to {height:120px;}
    }
}
@media screen and (max-width: 480px) {
    p {
        font-size: 24px;
    }
}
@media screen and (max-width: 360px) {
    p {
        font-size: 22px;
    }
	.hero img {
		max-width: 140px;
	}
    .faq-detail p {
        font-size: 1.3rem;
    }
}

